force-app/main/default/objects/Panel__c/Panel__c.object-meta.xml
<CustomObject>
    <label>Panel</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Panel Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>