force-app/main/default/objects/Panel__c/fields/Panel_Code__c.field-meta.xml
<CustomField>
    <fullName>Panel_Code__c</fullName>
    <label>Panel Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>