force-app/main/default/objects/Panel__c/fields/Panel_Description__c.field-meta.xml
<CustomField>
    <fullName>Panel_Description__c</fullName>
    <label>Panel Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>