force-app/main/default/objects/Panel__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>Panels</relationshipName>
    <type>Lookup</type>
</CustomField>